--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,11 +15,16 @@ body {
 
 ul {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
 li {
   margin-bottom: 10px;
+}
+
+p {
+  margin: 0;
 }
 
 img {
@@ -38,4 +43,9 @@ h1 {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-info div {
+  display: flex;
+  align-items: center;
 }
